--- a/Source/SizeOnDiskSetup/Product.wxs
+++ b/Source/SizeOnDiskSetup/Product.wxs
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
-     xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
-  <?define NetFx480MinRelease = 528040 ?>
+     xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension"
+     xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
+  <!--?define NetFx480MinRelease = 528040 ?-->
   <?define NetFx452MinRelease = 379893 ?>
   <Product Id="*"
            Name="SizeOnDisk !(bind.FileVersion.ApplicationFile)"
@@ -11,7 +12,7 @@
            Manufacturer="SizeOnDisk"
            UpgradeCode="9d3f227e-e788-4982-a15a-056152359ef6">
     <Package Description="SizeOnDisk !(bind.FileVersion.ApplicationFile)"
-    Manufacturer="SizeOnDisk"
+             Manufacturer="SizeOnDisk"
              InstallerVersion="200"
              Compressed="yes"
              InstallPrivileges='elevated'
@@ -29,7 +30,8 @@
                       Maximum="!(bind.FileVersion.ApplicationFile)"
                       IncludeMaximum="no" />
     </Upgrade>
-    <MajorUpgrade DowngradeErrorMessage="!(loc.HigherVersionDetectedError)" MigrateFeatures="yes"  />
+    <MajorUpgrade DowngradeErrorMessage="!(loc.HigherVersionDetectedError)"
+                  MigrateFeatures="yes"  />
     <Directory Id="TARGETDIR"
                Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
@@ -37,21 +39,61 @@
                    Name="SizeOnDisk" />
       </Directory>
       <Directory Id="ProgramMenuFolder" />
+      <Directory Id="DesktopFolder" />
     </Directory>
     <DirectoryRef Id="APPLICATIONFOLDER">
-      <Component Id="ApplicationFileComponent"
+      <Component Id="CleanupMainApplicationFolder"
                  Guid="*">
+        <RegistryValue Root="HKMU"
+                       Key="Software\SizeOnDisk"
+                       Name="SizeOnDiskInstalled"
+                       Type="string"
+                       Value="[APPLICATIONFOLDER]"
+                       KeyPath="yes" />
+        <util:RemoveFolderEx On="both"
+                             Property="APPLICATIONFOLDER" />
+      </Component>
+      <Component Id="ApplicationComponent"
+                 Guid="*">
+        <util:RemoveFolderEx Property="APPLICATIONFOLDER" On="both" />
         <CreateFolder />
-        <RemoveFile Id="AllFiles"
-                    Name="*.*"
-                    On="both" />
         <File Id="ApplicationFile"
               Name="$(var.SizeOnDisk.TargetFileName)"
               DiskId="1"
-              Source="$(var.SizeOnDisk.TargetDir)/SizeOnDisk.exe"
+              Source="$(var.SizeOnDisk.TargetDir)/$(var.SizeOnDisk.TargetFileName)"
               Checksum="yes"
               KeyPath="yes"
               Vital="yes" />
+      </Component>
+      <Component Id="XAMLMarkupExtensionsComponent"
+                 Guid="*">
+        <File Id="XAMLMarkupExtensionsFile"
+              Name="XAMLMarkupExtensions.dll"
+              DiskId="1"
+              Source="$(var.SizeOnDisk.TargetDir)/XAMLMarkupExtensions.dll"
+              KeyPath="yes"
+              Checksum="yes"
+              Vital="yes" />
+      </Component>
+      <Component Id="WPFLocalizeExtensionComponent"
+                 Guid="*">
+        <File Id="WPFLocalizeExtensionFile"
+              Name="WPFLocalizeExtension.dll"
+              DiskId="1"
+              Source="$(var.SizeOnDisk.TargetDir)/WPFLocalizeExtension.dll"
+              KeyPath="yes"
+              Checksum="yes"
+              Vital="yes" />
+      </Component>
+      <Component Id="WPFByYourCommandComponent"
+                 Guid="*">
+        <File Name="WPFByYourCommand.dll"
+              Id="WPFByYourCommandFile"
+              DiskId="1"
+              Source="$(var.SizeOnDisk.TargetDir)/WPFByYourCommand.dll"
+              Vital="yes"
+              Checksum="yes"
+              KeyPath="yes" />
       </Component>
       <Component Id="ConfigurationFileComponent"
                  Guid="*">
@@ -63,36 +105,79 @@
               Checksum="yes"
               Vital="no" />
       </Component>
-      <Component Id="XAMLMarkupComponent"
+      <Component Id="ApplicationDebugComponent"
                  Guid="*">
-        <File Id="XAMLMarkupFile"
-              Name="XAMLMarkupExtensions.dll"
+        <File Id="ApplicationDebugFile"
+              Name="SizeOnDisk.pdb"
               DiskId="1"
-              Source="$(var.SizeOnDisk.TargetDir)/XAMLMarkupExtensions.dll"
-              KeyPath="yes"
+              Source="$(var.SizeOnDisk.TargetDir)/SizeOnDisk.pdb"
               Checksum="yes"
-              Vital="yes" />
+              KeyPath="yes" />
       </Component>
-      <Component Id="WPFLocalizeComponent"
+      <Component Id="XAMLMarkupExtensionsDebugComponent"
                  Guid="*">
-        <File Id="WPFLocalizeFile"
-              Name="WPFLocalizeExtension.dll"
+        <File Id="XAMLMarkupExtensionsDebugFile"
+              Name="XAMLMarkupExtensions.pdb"
               DiskId="1"
-              Source="$(var.SizeOnDisk.TargetDir)/WPFLocalizeExtension.dll"
+              Source="$(var.SizeOnDisk.TargetDir)/XAMLMarkupExtensions.pdb"
               KeyPath="yes"
-              Checksum="yes"
-              Vital="yes" />
+              Checksum="yes" />
       </Component>
-      <Component Id="ByYourCommandComponent"
+      <Component Id="WPFLocalizeExtensionDebugComponent"
                  Guid="*">
-        <File Name="WPFByYourCommand.dll"
-              Id="WPFByYourCommandFile"
+        <File Id="WPFLocalizeExtensionDebugFile"
+              Name="WPFLocalizeExtension.pdb"
               DiskId="1"
-              Source="$(var.SizeOnDisk.TargetDir)/WPFByYourCommand.dll"
-              Vital="yes"
+              Source="$(var.SizeOnDisk.TargetDir)/WPFLocalizeExtension.pdb"
+              KeyPath="yes"
+              Checksum="yes" />
+      </Component>
+      <Component Id="WPFByYourCommandDebugComponent"
+                 Guid="*">
+        <File Name="WPFByYourCommand.pdb"
+              Id="WPFByYourCommandDebugFile"
+              DiskId="1"
+              Source="$(var.SizeOnDisk.TargetDir)/WPFByYourCommand.pdb"
               Checksum="yes"
-              KeyPath="yes">
-        </File>
+              KeyPath="yes" />
+      </Component>
+    </DirectoryRef>
+    <DirectoryRef Id="ProgramMenuFolder">
+      <Component Id="ApplicationFileMenuShortcutComponent"
+                 Guid="*">
+        <Shortcut Id="ApplicationFileMenuShortcut"
+                  Name="SizeOnDisk"
+                  Description="Programs Menu Shortcut to SizeOnDisk"
+                  Target="[#ApplicationFile]"
+                  IconIndex="0" />
+        <RemoveFile Id="ApplicationFileMenuShortcut"
+                    Name="SizeOnDisk"
+                    On="uninstall" />
+        <RegistryValue Root="HKMU"
+                       Key="Software\SizeOnDisk"
+                       Name="SizeOnDiskMenuShortcut"
+                       Type="integer"
+                       Value="1"
+                       KeyPath="yes" />
+      </Component>
+    </DirectoryRef>
+    <DirectoryRef Id="DesktopFolder">
+      <Component Id="ApplicationFileDesktopShortcutComponent"
+                 Guid="*">
+        <Shortcut Id="ApplicationFileDesktopShortcut"
+                  Name="SizeOnDisk"
+                  Description="Desktop Shortcut to SizeOnDisk"
+                  Target="[#ApplicationFile]"
+                  IconIndex="0" />
+        <RemoveFile Id="ApplicationFileDesktopShortcut"
+                    Name="SizeOnDisk"
+                    On="uninstall" />
+        <RegistryValue Root="HKMU"
+                       Key="Software\SizeOnDisk"
+                       Name="SizeOnDiskDesktopShortcut"
+                       Type="integer"
+                       Value="1"
+                       KeyPath="yes" />
       </Component>
     </DirectoryRef>
     <DirectoryRef Id="APPLICATIONFOLDER">
@@ -233,102 +318,107 @@
         </Component>
       </Directory>
     </DirectoryRef>
-    <DirectoryRef Id="ProgramMenuFolder">
-      <Component Id="ApplicationFileShortcutComponent"
-                 Guid="*">
-        <Shortcut Id="ApplicationFileShortcut"
-                  Name="SizeOnDisk"
-                  Description="Shortcut To SizeOnDisk"
-                  Target="[#ApplicationFile]"
-                  IconIndex="0" />
-        <RemoveFile Id="ApplicationFileShortcut" Name="SizeOnDisk" On="uninstall" />
-        <RegistryValue Root="HKMU"
-                       Key="Software\SizeOnDisk"
-                       Name="SizeOnDiskShortcut"
-                       Type="integer"
-                       Value="1"
-                       KeyPath="yes" />
-      </Component>
-    </DirectoryRef>
-    <Feature Id="ProductFeature" Absent="disallow"
-             Title="SizeOnDisk required files"
-              AllowAdvertise="no"
-             Level="1"
-             ConfigurableDirectory="APPLICATIONFOLDER">
-      <ComponentRef Id="ApplicationFileComponent" Primary="yes" />
-      <ComponentRef Id="XAMLMarkupComponent" />
-      <ComponentRef Id="WPFLocalizeComponent" />
-      <ComponentRef Id="ByYourCommandComponent" />
-      <ComponentRef Id="ApplicationFileShortcutComponent" />
+    <Feature Id="ProductFeature"
+             Absent="disallow"
+             Title="Required files"
+             AllowAdvertise="no"
+             Level="1">
+      <ComponentRef Id="CleanupMainApplicationFolder" />
+      <ComponentRef Id="ApplicationComponent" />
+      <ComponentRef Id="XAMLMarkupExtensionsComponent" />
+      <ComponentRef Id="WPFLocalizeExtensionComponent" />
+      <ComponentRef Id="WPFByYourCommandComponent" />
+    </Feature>
+    <Feature Id="MenuShortcutFeature"
+             Title="Programs menu shortcut"
+             AllowAdvertise="no"
+             Level="1">
+      <ComponentRef Id="ApplicationFileMenuShortcutComponent" />
+    </Feature>
+    <Feature Id="DesktopShortcutFeature"
+             Title="Desktop shortcut"
+             AllowAdvertise="no"
+             Level="1">
+      <ComponentRef Id="ApplicationFileDesktopShortcutComponent" />
     </Feature>
     <Feature Id="ConfigurationFeature"
-             Title="SizeOnDisk configuration file"
+             Title="Configuration file"
              Level="2"
-              AllowAdvertise="no"
+             AllowAdvertise="no"
              ConfigurableDirectory="APPLICATIONFOLDER">
       <ComponentRef Id="ConfigurationFileComponent" />
     </Feature>
     <Feature Id="LanguagesFeature"
              Title="Languages"
-              AllowAdvertise="no"
+             AllowAdvertise="no"
              Level="1">
       <Feature Id="LanguageDEFeature"
                Title="Deutsch"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageDEFileComponent" />
         <Condition Level="1">SystemLanguageID = 1031 OR SystemLanguageID = 3079 OR SystemLanguageID = 5127 OR SystemLanguageID = 4103 OR SystemLanguageID = 2055</Condition>
       </Feature>
       <Feature Id="LanguageESFeature"
                Title="!(loc.Espanol)"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageESFileComponent" />
         <Condition Level="1">SystemLanguageID = 1034 OR SystemLanguageID = 3082 OR SystemLanguageID = 11274 OR SystemLanguageID = 16394 OR SystemLanguageID = 13322 OR SystemLanguageID = 9226 OR SystemLanguageID = 5130 OR SystemLanguageID = 7178 OR SystemLanguageID = 12298 OR SystemLanguageID = 17418 OR SystemLanguageID = 4106 OR SystemLanguageID = 18442 OR SystemLanguageID = 22538 OR SystemLanguageID = 2058 OR SystemLanguageID = 19466 OR SystemLanguageID = 6154 OR SystemLanguageID = 15370 OR SystemLanguageID = 10250 OR SystemLanguageID = 20490 OR SystemLanguageID = 21514 OR SystemLanguageID = 14346 OR SystemLanguageID = 8202</Condition>
       </Feature>
       <Feature Id="LanguageFAFeature"
                Title="Farsi"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageFAFileComponent" />
         <Condition Level="1">SystemLanguageID = 1065</Condition>
       </Feature>
       <Feature Id="LanguageFRFeature"
                Title="!(loc.Francais)"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageFRFileComponent" />
         <Condition Level="1">SystemLanguageID = 1036 OR SystemLanguageID = 2060 OR SystemLanguageID = 11276 OR SystemLanguageID = 3084 OR SystemLanguageID = 9228 OR SystemLanguageID = 12300 OR SystemLanguageID = 15372 OR SystemLanguageID = 5132 OR SystemLanguageID = 13324 OR SystemLanguageID = 6156 OR SystemLanguageID = 14348 OR SystemLanguageID = 58380 OR SystemLanguageID = 8204 OR SystemLanguageID = 10252 OR SystemLanguageID = 4108 OR SystemLanguageID = 7180</Condition>
       </Feature>
       <Feature Id="LanguageITFeature"
                Title="Italiano"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageITFileComponent" />
         <Condition Level="1">SystemLanguageID = 1040 OR SystemLanguageID = 2064</Condition>
       </Feature>
       <Feature Id="LanguagePTFeature"
                Title="!(loc.Portugues)"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguagePTFileComponent" />
         <Condition Level="1">SystemLanguageID = 1046 OR SystemLanguageID = 2070</Condition>
       </Feature>
       <Feature Id="LanguageRUFeature"
                Title="Russian"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageRUFileComponent" />
         <Condition Level="1">SystemLanguageID = 1049 OR SystemLanguageID = 2073</Condition>
       </Feature>
       <Feature Id="LanguageSVFeature"
                Title="Svenska"
-              AllowAdvertise="no"
+               AllowAdvertise="no"
                Level="2">
         <ComponentRef Id="LanguageSVFileComponent" />
         <Condition Level="1">SystemLanguageID = 1053 OR SystemLanguageID = 2077</Condition>
       </Feature>
     </Feature>
+    <Feature Id="DebugFeature"
+             Title="Debugging files"
+             AllowAdvertise="no"
+             Level="2">
+      <ComponentRef Id="ApplicationDebugComponent" />
+      <ComponentRef Id="XAMLMarkupExtensionsDebugComponent" />
+      <ComponentRef Id="WPFLocalizeExtensionDebugComponent" />
+      <ComponentRef Id="WPFByYourCommandDebugComponent" />
+    </Feature>
+
     <Icon Id="SizeOnDiskIcon"
           SourceFile="Hard_Drive.ico" />
     <Property Id="ARPPRODUCTICON"
@@ -341,7 +431,14 @@
                       Root="HKLM"
                       Key="Software\Microsoft\Windows\CurrentVersion\Uninstall\[WIX_UPGRADE_DETECTED]"
                       Name="InstallLocation"
-                      Type="raw" Win64="no" />
+                      Type="raw"
+                      Win64="no" />
+      <RegistrySearch Key="Software\SizeOnDisk"
+                      Root="HKLM"
+                      Type="raw"
+                      Id="APPLICATIONFOLDER_REGSEARCH"
+                      Win64="no"
+                      Name="Path" />
     </Property>
     <WixVariable Id="WixUILicenseRtf"
                  Value="License.rtf" />
@@ -461,4 +558,7 @@
               After="WixSetDefaultPerMachineFolder" />
     </InstallExecuteSequence>
   </Product>
+  <Fragment>
+
+  </Fragment>
 </Wix>
