Litte visual fix

--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -186,22 +186,21 @@
                 </ListView.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                            <Grid Height="150" HorizontalAlignment="Stretch" Width="110">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="96" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Grid Width="96" Height="96" HorizontalAlignment="Center" VerticalAlignment="Bottom"  IsEnabled="{Binding Attributes, Converter={StaticResource IsNotEqualConverter}, ConverterParameter=Hidden}">
-                                    <Image Panel.ZIndex="42" Width="19" Height="19" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="Icons/Shortcut-big.png" Visibility="{Binding Extension, Converter={StaticResource IsEqualConverter}, ConverterParameter=lnk}" />
+                        <Grid Height="150" HorizontalAlignment="Stretch" Width="110">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="96" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid Width="96" Height="96" HorizontalAlignment="Center" VerticalAlignment="Bottom"  IsEnabled="{Binding Attributes, Converter={StaticResource IsNotEqualConverter}, ConverterParameter=Hidden}">
+                                <Image Panel.ZIndex="42" Width="19" Height="19" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="Icons/Shortcut-big.png" Visibility="{Binding Extension, Converter={StaticResource IsEqualConverter}, ConverterParameter=lnk}" />
                                 <cmd:AutoDisablingImage Width="{Binding Details.Thumbnail.Width}" Height="{Binding Details.Thumbnail.Height}" Source="{Binding Details.Thumbnail}" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                </Grid>
-                                <TextBlock Grid.Row="1" Style="{StaticResource ColoredName}" Text="{Binding Name}" MaxHeight="50" TextAlignment="Center" TextWrapping="Wrap" ToolTip="{Binding Name}" TextTrimming="CharacterEllipsis" />
                             </Grid>
+                            <TextBlock Grid.Row="1" Style="{StaticResource ColoredName}" Text="{Binding Name}" MaxHeight="50" TextAlignment="Center" TextWrapping="Wrap" ToolTip="{Binding Name}" TextTrimming="CharacterEllipsis" />
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListView>
             <DataGrid 
-                Background="Transparent"
                     Grid.Column="2"
                     VirtualizingStackPanel.VirtualizationMode="Standard"
                     cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
@@ -209,6 +208,7 @@
                     ItemsSource="{Binding SelectedTreeItem.Childs}"
                     SelectedItem="{Binding SelectedTreeItem.SelectedItem}"
                     AutoGenerateColumns="False"
+                Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
                     HeadersVisibility="Column"
                     ContextMenu="{StaticResource VMContextMenu}"
                     HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
