--- a/Source/SizeOnDiskSetup/Product.wxs
+++ b/Source/SizeOnDiskSetup/Product.wxs
@@ -55,7 +55,8 @@
       </Component>
       <Component Id="ApplicationComponent"
                  Guid="*">
-        <util:RemoveFolderEx Property="APPLICATIONFOLDER" On="both" />
+        <util:RemoveFolderEx Property="APPLICATIONFOLDER"
+                             On="both" />
         <CreateFolder />
         <File Id="ApplicationFile"
               Name="$(var.SizeOnDisk.TargetFileName)"
@@ -318,105 +319,108 @@
         </Component>
       </Directory>
     </DirectoryRef>
-    <Feature Id="ProductFeature"
-             Absent="disallow"
-             Title="Required files"
-             AllowAdvertise="no"
-             Level="1">
-      <ComponentRef Id="CleanupMainApplicationFolder" />
-      <ComponentRef Id="ApplicationComponent" />
-      <ComponentRef Id="XAMLMarkupExtensionsComponent" />
-      <ComponentRef Id="WPFLocalizeExtensionComponent" />
-      <ComponentRef Id="WPFByYourCommandComponent" />
-    </Feature>
-    <Feature Id="MenuShortcutFeature"
-             Title="Programs menu shortcut"
-             AllowAdvertise="no"
-             Level="1">
-      <ComponentRef Id="ApplicationFileMenuShortcutComponent" />
-    </Feature>
-    <Feature Id="DesktopShortcutFeature"
-             Title="Desktop shortcut"
-             AllowAdvertise="no"
-             Level="1">
-      <ComponentRef Id="ApplicationFileDesktopShortcutComponent" />
-    </Feature>
-    <Feature Id="ConfigurationFeature"
-             Title="Configuration file"
-             Level="2"
-             AllowAdvertise="no"
-             ConfigurableDirectory="APPLICATIONFOLDER">
-      <ComponentRef Id="ConfigurationFileComponent" />
-    </Feature>
-    <Feature Id="LanguagesFeature"
-             Title="Languages"
-             AllowAdvertise="no"
-             Level="1">
-      <Feature Id="LanguageDEFeature"
-               Title="Deutsch"
+    <Feature Id="AllFeatures" Display="expand" Title="SizeOnDisk"
+             AllowAdvertise="no" Level="1">
+      <Feature Id="ProductFeature"
+               Absent="disallow"
+               Title="Required files"
+               AllowAdvertise="no"
+               Level="1">
+        <ComponentRef Id="CleanupMainApplicationFolder" />
+        <ComponentRef Id="ApplicationComponent" />
+        <ComponentRef Id="XAMLMarkupExtensionsComponent" />
+        <ComponentRef Id="WPFLocalizeExtensionComponent" />
+        <ComponentRef Id="WPFByYourCommandComponent" />
+      </Feature>
+      <Feature Id="MenuShortcutFeature"
+               Title="Programs menu shortcut"
+               AllowAdvertise="no"
+               Level="1">
+        <ComponentRef Id="ApplicationFileMenuShortcutComponent" />
+      </Feature>
+      <Feature Id="DesktopShortcutFeature"
+               Title="Desktop shortcut"
+               AllowAdvertise="no"
+               Level="1">
+        <ComponentRef Id="ApplicationFileDesktopShortcutComponent" />
+      </Feature>
+      <Feature Id="ConfigurationFeature"
+               Title="Configuration file"
+               Level="2"
+               AllowAdvertise="no"
+               ConfigurableDirectory="APPLICATIONFOLDER">
+        <ComponentRef Id="ConfigurationFileComponent" />
+      </Feature>
+      <Feature Id="LanguagesFeature"
+               Title="Languages"
+               AllowAdvertise="no"
+               Level="1">
+        <Feature Id="LanguageDEFeature"
+                 Title="Deutsch"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageDEFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"de"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageESFeature"
+                 Title="!(loc.Espanol)"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageESFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"es"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageFAFeature"
+                 Title="Farsi"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageFAFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"fa"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageFRFeature"
+                 Title="!(loc.Francais)"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageFRFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"fr"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageITFeature"
+                 Title="Italiano"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageITFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"it"]]></Condition>
+        </Feature>
+        <Feature Id="LanguagePTFeature"
+                 Title="!(loc.Portugues)"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguagePTFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"pt"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageRUFeature"
+                 Title="Russian"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageRUFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages><"ru"]]></Condition>
+        </Feature>
+        <Feature Id="LanguageSVFeature"
+                 Title="Svenska"
+                 AllowAdvertise="no"
+                 Level="2">
+          <ComponentRef Id="LanguageSVFileComponent" />
+          <Condition Level="1"><![CDATA[WinInstalledLanguages >< "sv"]]></Condition>
+        </Feature>
+      </Feature>
+      <Feature Id="DebugFeature"
+               Title="Debugging files"
                AllowAdvertise="no"
                Level="2">
-        <ComponentRef Id="LanguageDEFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1031 OR SystemLanguageID = 3079 OR SystemLanguageID = 5127 OR SystemLanguageID = 4103 OR SystemLanguageID = 2055</Condition>
+        <ComponentRef Id="ApplicationDebugComponent" />
+        <ComponentRef Id="XAMLMarkupExtensionsDebugComponent" />
+        <ComponentRef Id="WPFLocalizeExtensionDebugComponent" />
+        <ComponentRef Id="WPFByYourCommandDebugComponent" />
       </Feature>
-      <Feature Id="LanguageESFeature"
-               Title="!(loc.Espanol)"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageESFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1034 OR SystemLanguageID = 3082 OR SystemLanguageID = 11274 OR SystemLanguageID = 16394 OR SystemLanguageID = 13322 OR SystemLanguageID = 9226 OR SystemLanguageID = 5130 OR SystemLanguageID = 7178 OR SystemLanguageID = 12298 OR SystemLanguageID = 17418 OR SystemLanguageID = 4106 OR SystemLanguageID = 18442 OR SystemLanguageID = 22538 OR SystemLanguageID = 2058 OR SystemLanguageID = 19466 OR SystemLanguageID = 6154 OR SystemLanguageID = 15370 OR SystemLanguageID = 10250 OR SystemLanguageID = 20490 OR SystemLanguageID = 21514 OR SystemLanguageID = 14346 OR SystemLanguageID = 8202</Condition>
-      </Feature>
-      <Feature Id="LanguageFAFeature"
-               Title="Farsi"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageFAFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1065</Condition>
-      </Feature>
-      <Feature Id="LanguageFRFeature"
-               Title="!(loc.Francais)"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageFRFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1036 OR SystemLanguageID = 2060 OR SystemLanguageID = 11276 OR SystemLanguageID = 3084 OR SystemLanguageID = 9228 OR SystemLanguageID = 12300 OR SystemLanguageID = 15372 OR SystemLanguageID = 5132 OR SystemLanguageID = 13324 OR SystemLanguageID = 6156 OR SystemLanguageID = 14348 OR SystemLanguageID = 58380 OR SystemLanguageID = 8204 OR SystemLanguageID = 10252 OR SystemLanguageID = 4108 OR SystemLanguageID = 7180</Condition>
-      </Feature>
-      <Feature Id="LanguageITFeature"
-               Title="Italiano"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageITFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1040 OR SystemLanguageID = 2064</Condition>
-      </Feature>
-      <Feature Id="LanguagePTFeature"
-               Title="!(loc.Portugues)"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguagePTFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1046 OR SystemLanguageID = 2070</Condition>
-      </Feature>
-      <Feature Id="LanguageRUFeature"
-               Title="Russian"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageRUFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1049 OR SystemLanguageID = 2073</Condition>
-      </Feature>
-      <Feature Id="LanguageSVFeature"
-               Title="Svenska"
-               AllowAdvertise="no"
-               Level="2">
-        <ComponentRef Id="LanguageSVFileComponent" />
-        <Condition Level="1">SystemLanguageID = 1053 OR SystemLanguageID = 2077</Condition>
-      </Feature>
-    </Feature>
-    <Feature Id="DebugFeature"
-             Title="Debugging files"
-             AllowAdvertise="no"
-             Level="2">
-      <ComponentRef Id="ApplicationDebugComponent" />
-      <ComponentRef Id="XAMLMarkupExtensionsDebugComponent" />
-      <ComponentRef Id="WPFLocalizeExtensionDebugComponent" />
-      <ComponentRef Id="WPFByYourCommandDebugComponent" />
     </Feature>
 
     <Icon Id="SizeOnDiskIcon"
@@ -523,39 +527,40 @@
 
     </UI>
 
-    <CustomAction
-      Id="OverwriteWixSetDefaultPerMachineFolder"
-      Property="WixPerMachineFolder"
-      Value="[APPLICATIONFOLDER]"
-      Execute="immediate"/>
 
-    <SetProperty Id="ARPINSTALLLOCATION"
-                 Value="[APPLICATIONFOLDER]"
-                 After="CostFinalize" />
+    <Binary Id="WixTools.CA.dll"
+            src="$(var.SolutionDir)\WixTools\bin\$(var.Configuration)\WixTools.CA.dll" />
 
-    <!--Property Id="WixShellExecTarget"
+    <CustomAction Id="GetLanguages"
+                  Return="check"
+                  Execute="immediate"
+                  BinaryKey="WixTools.CA.dll"
+                  DllEntry="GetLanguages" Impersonate="yes" />
+
+    <Property Id="WixShellExecTarget"
               Value="[#ApplicationFile]" />
 
     <CustomAction Id="LaunchApplication"
                   BinaryKey="WixCA"
                   DllEntry="WixShellExec"
-                  Impersonate="yes" /-->
+                  Execute="immediate"
+                  Impersonate="yes" />
 
-    <CustomAction Id="LaunchApplication"
+    <!--CustomAction Id="LaunchApplication"
                   FileKey="ApplicationFile"
                   ExeCommand=""
                   Execute="immediate"
                   Impersonate="yes"
-                  Return="asyncNoWait" />
+                  Return="asyncNoWait" /-->
 
     <InstallUISequence>
-      <Custom Action="OverwriteWixSetDefaultPerMachineFolder"
-              After="WixSetDefaultPerMachineFolder" />
+      <Custom Action="GetLanguages"
+              Before="CostFinalize" />
     </InstallUISequence>
 
     <InstallExecuteSequence>
-      <Custom Action="OverwriteWixSetDefaultPerMachineFolder"
-              After="WixSetDefaultPerMachineFolder" />
+      <Custom Action="GetLanguages"
+              Before="CostFinalize" />
     </InstallExecuteSequence>
   </Product>
   <Fragment>
