Execute it at the end: I have to find why it works with PerMachine but not PerUser: To check: UAC and DestinationFolder variable.

--- a/Source/SizeOnDiskSetup/Product.wxs
+++ b/Source/SizeOnDiskSetup/Product.wxs
@@ -544,7 +544,7 @@
                   BinaryKey="WixCA"
                   DllEntry="WixShellExec"
                   Execute="immediate"
-                  Impersonate="yes" />
+                  Impersonate="no" />
 
     <!--CustomAction Id="LaunchApplication"
                   FileKey="ApplicationFile"
